09-kubernetes/15-desplegar/yaml/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
  labels:
    app: backend1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
        - name: backend1-pod
          image: 282865065290.dkr.ecr.us-east-2.amazonaws.com/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          resources:
            limits:
              memory: '600Mi'
            requests:
              memory: '500Mi'
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3010
            initialDelaySeconds: 3
            periodSeconds: 20
