09-kubernetes/15-desplegar/yaml/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2-pod
          image: 282865065290.dkr.ecr.us-east-2.amazonaws.com/backend2
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 20
